--- a/Services/Notification.API/package.json
+++ b/Services/Notification.API/package.json
@@ -4,17 +4,25 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "eslint": "^9.39.1"
+    "eslint": "^9.39.1",
+    "nodemon": "^3.0.2"
   },
   "dependencies": {
     "dotenv": "^17.2.3",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "cors": "^2.8.5",
+    "axios": "^1.6.2",
+    "nodemailer": "^6.9.7",
+    "twilio": "^4.19.0",
+    "mongoose": "^8.0.3",
+    "uuid": "^9.0.1"
   }
 }
