--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,11 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^1.6.2",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
-    "axios": "^1.6.2",
     "web-vitals": "^3.5.0"
   },
   "scripts": {
@@ -34,9 +35,8 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.3.6",
     "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.32"
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.3.6"
   }
 }
-
