--- a/Services/Leave.API/requirements.txt
+++ b/Services/Leave.API/requirements.txt
@@ -1,7 +1,8 @@
-Flask>=2.2.3
-PyJWT>=2.4
-requests>=2.28
-Flask-SQLAlchemy>=3.0
-pymysql>=1.0.3
-Flask-Marshmallow>=0.14
-marshmallow>=3.19
+Flask==2.2.5
+Flask-SQLAlchemy==3.0.3
+Flask-Migrate==4.0.4
+marshmallow==3.19.0
+pyodbc==4.0.36
+requests==2.31.0
+python-dotenv==1.0.0
+gunicorn==20.1.0
